cluster/apps/default/surveillance/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: surveillance
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: &host surveillance.${SECRET_DOMAIN}
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: surveillance
              port:
                number: 9901
  tls:
    - hosts:
      - *host
      secretName: wildcard-cert-tls
